[gd_scene load_steps=2 format=2]

[ext_resource path="res://CreateRoom.gd" type="Script" id=1]

[node name="CreateRoom" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0
rect_min_size = Vector2( 350, 200 )
window_title = "Create new room"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_min_size = Vector2( 260, 110 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 310.0
margin_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 2.0
margin_right = 310.0
margin_bottom = 108.0
size_flags_horizontal = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoosePicture" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 57.0
margin_bottom = 106.0
size_flags_vertical = 3
text = "Picture"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 77.0
margin_right = 310.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
alignment = 1

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 233.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Room Name:"
valign = 2

[node name="Name" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 233.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelAlias" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 233.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Room Alias:"
valign = 2

[node name="Alias" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 233.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 233.0
margin_bottom = 106.0
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 310.0
margin_bottom = 158.0
alignment = 2

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 210.0
margin_right = 264.0
margin_bottom = 20.0
text = "Cancel"

[node name="Next" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 268.0
margin_right = 310.0
margin_bottom = 20.0
text = "Next"
[connection signal="about_to_show" from="." to="." method="_on_CreateRoom_about_to_show"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Next" to="." method="_on_Next_pressed"]
